tests/ui/self/arbitrary_self_types_nonnull.rs
#![feature(arbitrary_self_types)]

struct A;

impl A {
    fn m(self: std::ptr::NonNull<Self>) {}
    //~^ ERROR: invalid `self` parameter type
    fn n(self: &std::ptr::NonNull<Self>) {}
    //~^ ERROR: invalid `self` parameter type
}

fn main() {
}
